# commercial-agent-tivit

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
docs/: business_rules.yaml  current_state.md  data_dictionary.yaml  metric_catalog.yaml  pending_validations.md
docs/sources/: Consultas habituales de ventas.txt  Roadmap.md
scripts/: inspect_workbooks.py  load_bigquery.py  profile_business_data.py
src/sales_assistant/: config.py  main.py
src/sales_assistant/api/: dependencies.py  routes.py  schemas.py
src/sales_assistant/business/: __init__.py  commercial_tools.py  profiling.py
src/sales_assistant/ingestion/: __init__.py  excel_reader.py  workbook_loader.py
src/sales_assistant/llm/: __init__.py  agent.py  client.py  intent_parser.py  response_writer.py
src/sales_assistant/orchestration/: __init__.py
src/sales_assistant/persistence/: __init__.py  bigquery_repository.py  repository.py
src/sales_assistant/validation/: __init__.py  quality_report.py  schema_validator.py
tests/: test_api.py
tests/unit/: test_commercial_tools.py  test_excel_reader.py  test_profiling.py  test_schema_validator.py
