[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "commercial-sales-assistant"
version = "0.1.0"
description = "Phase 1 skeleton for a commercial data assistant."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "google-auth>=2.40.0,<3.0.0",
  "google-genai>=2.8.0,<3.0.0",
  "langchain>=1.0.0,<2.0.0",
  "langchain-google-genai>=4.2.0,<5.0.0",
  "langgraph>=1.0.0,<2.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "pandas>=2.3.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sales_assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: pruebas opcionales que dependen de servicios externos",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
